--- a/backend/api/src/main/resources/application.properties
+++ b/backend/api/src/main/resources/application.properties
@@ -3,7 +3,7 @@
 
 spring.datasource.initialization-mode=always
 spring.datasource.platform=postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/unimed
+spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/unimed
 spring.datasource.username=postgres
 spring.datasource.password=1234
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
